[project]
name = "alchemy_test"
authors = [
    {name = "Louis Beal", email = "louis.j.beal@gmail.com"}
]
requires-python = ">=3.7"
description = "remote run management tool"
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Benchmark",
    "Topic :: System :: Distributed Computing",
]
dynamic = ['version']
keywords = []

dependencies = [
    # 'SQLAlchemy',
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-xdist",
]

[project.urls]
Homepage = "https://gitlab.com/l_sim/remotemanager/"
Documentation = "https://l_sim.gitlab.io/remotemanager/"
Repository = "https://gitlab.com/l_sim/remotemanager/"
Issues = "https://gitlab.com/l_sim/remotemanager/-/issues"
Changelog = "https://l_sim.gitlab.io/remotemanager/versions.html"

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = 'alchemy_test.__version__'}

[tool.pylance]
exclude = [
    "**/tests/**",
    "**/test_*.py",
    "**/_build/**"
]
typeCheckingMode = "strict"

[tool.pyright]
exclude = [
    "**/tests/**",
    "**/test_*.py",
    "**/_build/**"
]
typeCheckingMode = "strict"
